--- a/services/frontend/app/templates/application.hbs
+++ b/services/frontend/app/templates/application.hbs
@@ -1,7 +1,6 @@
-{{page-title "Frontend"}}
-
-{{!-- The following component displays Ember's default welcome message. --}}
-<WelcomePage />
-{{!-- Feel free to remove this! --}}
-
-{{outlet}}
+<AuModalContainer />
+<AuApp>
+  <AuLink @route="editor">editor</AuLink>
+  {{outlet}}
+</AuApp>
+<AuToaster @position='top' class='toaster' />
